Bug 645642: use text-align: match-parent in list items, options and file inputs, r=dbaron
UltraBlame original commit: 6267c4d1de60680bb07bf9b5e79c93f62c0857c1

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -307,6 +307,7 @@ option {
   text-indent: 0;
   white-space: nowrap !important;
   word-wrap: normal !important;
+  text-align: match-parent;
 }
 
 select > option {
@@ -447,6 +448,7 @@ input[type="file"] {
 input[type="file"] > xul|label {
   min-inline-size: 12em;
   -moz-padding-start: 5px;
+  text-align: match-parent;
 
   color: inherit;
   font-size: inherit;
@@ -482,10 +484,10 @@ input[type="color"]:-moz-system-metric(color-picker-available)::-moz-color-swatc
 
 
 
+
 input[type="file"]:-moz-dir(rtl) > xul|label {
   -moz-padding-start: 0px;
   -moz-padding-end: 5px;
-  text-align: right;
 }
 
 
