--- a/layout/style/html.css
+++ b/layout/style/html.css
@@ -587,6 +587,7 @@ ol {
 
 li {
   display: list-item;
+  text-align: match-parent;
 }
 
 
